--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,9 @@
+* {
+        font-family:monospace;
+        font-weight: 1000;
+        font-size: larger;
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -15,6 +21,33 @@ body {
 }
 
 #container>* {
-    margin: 10px;
-    border: black;
+    margin-top: 5px;
+    border-width: thick;
+    border-style: solid;
+    
+    width:90%;
+}
+
+#output {
+    background-color:rgb(202, 201, 201);
+    height: 50px;
+}
+
+#nums {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0px;
+}
+
+button {
+    width: 100%;
+    height: 50px;
+}
+
+#operations {
+    display:flex;
+}
+
+#execute {
+    display:flex;
 }
