--- a/static/main.css
+++ b/static/main.css
@@ -40,7 +40,7 @@ body {
     font-size: 2rem;
     color: #f1f1f1;
     box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.3);
-    overflow-x: auto;
+    overflow: hidden;
     border: 1px solid #444;
 }
 
